# YAECS

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ExampleComponents.h  RawSys.cpp  StateMachine.cpp  StateMachine.h  main.cpp  mainAlter.cpp  main_Static.cpp
src/Core/: Archetype.hpp  CMakeLists.txt  Collider.cpp  Collider.h  ComponentEntity.hpp  CoreComponents.cpp  CoreComponents.h  ECS.hpp  MultipleCall.hpp  StateMachine.hpp  StateMarker.hpp  TypeManip.hpp  UntypeContainer.cpp  UntypeContainer.h  Utils.h  Vector2.h  yaECS.hpp  yaECS_Static.hpp
